--- a/custom_components/sonnenbatterie/manifest.json
+++ b/custom_components/sonnenbatterie/manifest.json
@@ -1,11 +1,11 @@
 {
     "domain": "sonnenbatterie",
     "name": "Sonnenbatterie",
-    "codeowners": ["@weltmeyer"],
+    "codeowners": ["@weltmeyer", "@timgraves"],
     "config_flow": true,
     "dependencies": [],
     "documentation": "https://github.com/weltmeyer/ha_sonnenbatterie",
     "iot_class": "local_polling",
-    "requirements": ["requests","sonnenbatterie>=0.1.1"],
-    "version": "2020.06.07"
+    "requirements": ["requests","sonnenbatterie>=0.2.6"],
+    "version": "2023.10.17"
 }
