--- a/custom_components/sonnenbatterie/manifest.json
+++ b/custom_components/sonnenbatterie/manifest.json
@@ -1,11 +1,11 @@
 {
-    "domain": "sonnenbatterie",
-    "name": "Sonnenbatterie",
+    "domain": "sonnenbatteriev2",
+    "name": "SonnenbatterieV2",
     "codeowners": ["@weltmeyer", "@timgraves"],
     "config_flow": true,
     "dependencies": [],
     "documentation": "https://github.com/weltmeyer/ha_sonnenbatterie",
     "iot_class": "local_polling",
-    "requirements": ["requests","sonnenbatterie>=0.2.7"],
-    "version": "2023.11.03"
+    "requirements": ["requests","sonnenbatterie>=0.2.6"],
+    "version": "2023.11.06"
 }
